--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yuthana Tantirungrotechai"
-  avatar           : "profile.png"
+  avatar           : "yt-photo.jpg"
   bio              : "Computational Chemist&Lecturer"
   location         : "Thammasat University"
   employer         : 
