--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-minimal_mistakes_skin    : "air"
+minimal_mistakes_skin    : "plum"
 title                    : "Yuthana Tantirungrotechai's homepage"
 title_separator          : "-"
 name                     : &name "Yuthana Tantirungrotechai"
