--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,13 @@
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
+# theme                  : "minimal-mistakes-jekyll"
+# remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 
 # Site Settings
 locale                   : "en-US"
-minimal_mistakes_skin    : "plum"
 title                    : "Yuthana Tantirungrotechai's homepage"
 title_separator          : "-"
 name                     : &name "Yuthana Tantirungrotechai"
